--- a/conference.html
+++ b/conference.html
@@ -226,11 +226,11 @@
         <div class="divider"></div>
 
         <section class="padded-comfortable">
-            <h2 class="center light orange-text">Schedule</h2>
-            <div class="row">
+            <h2 class="center orange-text text-darken-4">Schedule</h2>
+            <div class="row padded-top-comfortable">
                 <div class="col s12 m8 push-m2">
                     <div class="card rounded">
-                        <table class="highlight responsive-table centered">
+                        <table class="highlight responsive-table centered ">
                             <thead>
                                 <tr>
                                     <th>Date</th>
