--- a/hackathon.html
+++ b/hackathon.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header>
+    <header>
         <div class="navbar-fixed">
             <nav class="white">
                 <div class="nav-wrapper container">
@@ -103,24 +103,24 @@
                     Last Date
                 </h4>
 
-                <h6 style="text-align: center;">
+                <h5 style="text-align: center;">
                     July 10 2K18
-                </h6>
+                </h5>
             </div>
-            <div class="col s5 grey lighten-3" style="height: 150px; margin-left: 60px; width: 450px; border-bottom: 6px solid orange; border-right: 6px solid orange">
+            <div class="col s5 grey lighten-3" style="height: 150px; margin-left: 60px; width: 450px; border-bottom: 6px solid orange; border-left: 6px solid orange">
                 <br>
                 <h4 style="text-align: center;">
                     Venue
                 </h4>
 
-                <h6 style="text-align: center;">
+                <h5 style="text-align: center;">
                     TCS Mihan
-                </h6>
+                </h5>
             </div>
         </div>
         <br><br>
         <div class="row container">
-            <h3>Problem Statements</h3>
+            <h3 style="color: orange">Problem Statements</h3>
             <br><br>
 
 
@@ -130,51 +130,52 @@
             <div class="filterDiv topicone">
                 <ul class="collapsible popout">
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center" style="border-right: 6px solid orange"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
+                    </li>
+                    <br>
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
-
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
-
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
-
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
-
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
-
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
-
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
-
+                    <br>
                     <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
-                    </li>
-
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
                 </ul>
