--- a/about.html
+++ b/about.html
@@ -80,7 +80,19 @@
     <main>
         <div class="row container">
         <h2 class="center" style="color: orange">Overview</h2>
-        <h5 class="center" style="word-spacing: 5px;">The loT event aims at eradicating this ignorance by educating students about the clear picture of these cutting edge technologies with real time use-cases rather than just technology layer discussions and encourage the students to prepare, adapt, thrive, and lead in the next major technology growth area - IoT.</h5>
+        <p class="center" style="word-spacing: 2px; font-size: 22px;">The loT event aims at eradicating this ignorance by educating students about the clear picture of these cutting edge technologies with real time use-cases rather than just technology layer discussions and encourage the students to prepare, adapt, thrive, and lead in the next major technology growth area - IoT.</p>
+
+        <br><br>
+        <h2 class="center" style="color: orange">Event Activities</h2>
+        <p class="center" style="word-spacing: 2px; font-size: 22px;">
+           <br>
+            1. A Pre-Conference Project Competetion.
+            <br>  <button data-target="modal1" class="btn modal-trigger">Modal</button>
+            <br>
+            2. Project Implementation.
+            <br>
+            3. The Conference Day.
+        </p>
         </div>
     </main>
 
