--- a/about.html
+++ b/about.html
@@ -84,15 +84,21 @@
 
         <br><br>
         <h2 class="center" style="color: orange">Event Activities</h2>
-        <p class="center" style="word-spacing: 2px; font-size: 22px;">
-           <br>
-            1. A Pre-Conference Project Competetion.
-            <br>  <button data-target="modal1" class="btn modal-trigger">Modal</button>
+            <p class="center" style="word-spacing: 2px; font-size: 22px;">
+                1. A Pre-Conference Project Competetion.
+                <br>
+                2. Project Implementation.
+                <br>
+                3. The Conference Day.
+            </p>
+
             <br>
-            2. Project Implementation.
-            <br>
-            3. The Conference Day.
-        </p>
+        <div>
+            <h2 class="center" style="color: orange">Organizers</h2>
+            <p>
+
+            </p>
+        </div>
         </div>
     </main>
 
