--- a/about.html
+++ b/about.html
@@ -83,6 +83,28 @@
         <p class="center" style="word-spacing: 2px; font-size: 22px;">The loT event aims at eradicating this ignorance by educating students about the clear picture of these cutting edge technologies with real time use-cases rather than just technology layer discussions and encourage the students to prepare, adapt, thrive, and lead in the next major technology growth area - IoT.</p>
 
         <br><br>
+        <hr>
+        <div>
+            <h2 class="center" style="color: orange">Project Domain</h2>
+            <p class="center" style="word-spacing: 2px; font-size: 22px;">
+                1.   Life Science, Textile, Healthcare & Pharmacy
+                <br>
+                2.   Automobile, Defence & Aerospace
+                <br>
+                3.   Logistics, Supply Chain & Warehousing
+                <br>
+                4.   Travel, Transport & Hospitality
+                <br>
+                5.   Agriculture & Food Processing
+                <br>
+                6.   Energy & Environment
+                <br>
+                7.   Government & Citizen Services
+
+            </p>
+        </div>
+        <br>
+        <hr>
         <h2 class="center" style="color: orange">Event Activities</h2>
             <p class="center" style="word-spacing: 2px; font-size: 22px;">
                 1. A Pre-Conference Project Competetion.
@@ -93,12 +115,20 @@
             </p>
 
             <br>
+            <hr>
         <div>
-            <h2 class="center" style="color: orange">Organizers</h2>
-            <p>
-
+            <h2 class="center" style="color: orange">Event Dates</h2>
+            <p class="center" style="word-spacing: 2px; font-size: 22px;">
+                Final Project Submission: 14 Sept 2K18
+                <br>
+                Project Competetion : 17 - 21 Sept 2K18
+                <br>
+                Conference Date: 28 Sept 2K18
             </p>
         </div>
+        br
+        <hr>
+
         </div>
     </main>
 
