--- a/hackathon.html
+++ b/hackathon.html
@@ -97,7 +97,7 @@
 
         <br><br><br>
         <div class="row container" style="height: 150px;">
-            <div class="col s5 grey lighten-3" style="height: 150px; width: 450px; border-bottom: 6px solid orange; border-left: 6px solid orange">
+            <div class="col s5 grey lighten-3" style="height: 150px; width: 450px; border-bottom: 6px solid orange; border-right: 6px solid orange">
                 <br>
                 <h4 style="text-align: center;">
                     Last Date
