--- a/conference.html
+++ b/conference.html
@@ -134,7 +134,7 @@
         </section>
         <div class="divider"></div>
 
-        <!--<section class="padded-top-cozy padded-bottom-cozy grey lighten-2">
+        <section class="padded-top-cozy padded-bottom-cozy grey lighten-2">
             <div class="container">
                 <div class="row">
 
@@ -156,8 +156,7 @@
 
                 </div>
             </div>
-        </section>-->
-
+        </section>
 
 
 
