--- a/hackathon.html
+++ b/hackathon.html
@@ -88,7 +88,7 @@
 
                     <br><br><br><br><br><br><br><br>
 
-                    <h1 class="header center white-text">CII-HACKATHON</h1>
+                    <h1 class="header center white-text">HACKATHON</h1>
 
                 </div>
             </div>
