--- a/hackathon.html
+++ b/hackathon.html
@@ -81,21 +81,25 @@
 
 
     <main>
-        <div id="index-banner" class="parallax-container" style="height: 93vh">
+        <div id="index-banner" class="parallax-container" style="height: 70vh">
             <div class="section no-pad-bot">
                 <div class="container">
                     <br><br>
 
-                    <br><br><br><br><br><br><br><br>
+                    <br><br><br><br><br><br>
 
                     <h1 class="header center white-text">HACKATHON</h1>
+
+                    <h4 class="center orange-text text-lighten-1">July 27, 2018</h4>
+
+                    <h4 class="center orange-text text-lighten-1">Some address</h4>
 
                 </div>
             </div>
             <div class="parallax"><img src="images/business-commerce-computer-132700.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);"></div>
         </div>
 
-        <br><br><br>
+        <!--
         <div class="row container" style="height: 150px;">
             <div class="col s5 grey lighten-3" style="height: 150px; width: 450px; border-bottom: 6px solid orange; border-right: 6px solid orange">
                 <br>
@@ -118,9 +122,9 @@
                 </h5>
             </div>
         </div>
-        <br><br>
+        -->
         <div class="row container">
-            <h3 style="color: orange">Problem Statements</h3>
+            <h3 class="orange-text text-lighten-2 center">Problem Statements</h3>
             <br><br>
 
 
@@ -130,54 +134,65 @@
             <div class="filterDiv topicone">
                 <ul class="collapsible popout">
                     <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center" style="border-right: 6px solid orange"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
+                        <div class="collapsible-header">
+                            <i class="material-icons" style="color: orange">adjust</i>Problem Statement
+                        </div>
+                        <div class="collapsible-body center" style="border-right: 6px solid orange">
+                            <h4>Problem Statement</h4>
+                            <h6>Details about the Problem Statement</h6>
+                            <h5>Eligibility Criteria</h5>
+                            <p> one <br> two <br>three <br></p>
+                        </div>
+                        <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
+
                     </li>
                     <br>
+
                     <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
+                        <div class="collapsible-header">
+                            <i class="material-icons" style="color: orange">adjust</i>Problem Statement
+                        </div>
+                        <div class="collapsible-body center" style="border-right: 6px solid orange">
+                            <h4>Problem Statement</h4>
+                            <h6>Details about the Problem Statement</h6>
+                            <h5>Eligibility Criteria</h5>
+                            <p> one <br> two <br>three <br></p>
+                        </div>
+                        <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
                     </li>
+
                     <br>
+
                     <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
+                        <div class="collapsible-header">
+                            <i class="material-icons" style="color: orange">adjust</i>Problem Statement
+                        </div>
+                        <div class="collapsible-body center" style="border-right: 6px solid orange">
+                            <h4>Problem Statement</h4>
+                            <h6>Details about the Problem Statement</h6>
+                            <h5>Eligibility Criteria</h5>
+                            <p> one <br> two <br>three <br></p>
+                        </div>
+                        <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
                     </li>
+
+
                     <br>
+
                     <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
+                        <div class="collapsible-header">
+                            <i class="material-icons" style="color: orange">adjust</i>Problem Statement
+                        </div>
+                        <div class="collapsible-body center" style="border-right: 6px solid orange">
+                            <h4>Problem Statement</h4>
+                            <h6>Details about the Problem Statement</h6>
+                            <h5>Eligibility Criteria</h5>
+                            <p> one <br> two <br>three <br></p>
+                        </div>
+                        <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
                     </li>
-                    <br>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
-                    </li>
-                    <br>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
-                    </li>
-                    <br>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
-                    </li>
-                    <br>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
-                    </li>
-                    <br>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
-                    </li>
-                    <br>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
-                    </li>
+
+
                 </ul>
 
             </div>
