--- a/hackathon.html
+++ b/hackathon.html
@@ -68,15 +68,6 @@
                 <a class="waves-effect" href="contact.html">Contact</a>
             </li>
         </ul>
-
-
-
-
-
-
-
-
-
     </header>
 
 
@@ -90,9 +81,9 @@
 
                     <h1 class="header center white-text">HACKATHON</h1>
 
-                    <h4 class="center orange-text text-lighten-1">July 27, 2018</h4>
+                    <h4 class="center orange-text text-lighten-1"><i class="material-icons">calendar_today</i>        July 27, 2018</h4>
 
-                    <h4 class="center orange-text text-lighten-1">Some address</h4>
+                    <h4 class="center orange-text text-lighten-1">TCS Mihan</h4>
 
                 </div>
             </div>
@@ -123,6 +114,7 @@
             </div>
         </div>
         -->
+        <br><br>
         <div class="row container">
             <h3 class="orange-text text-lighten-2 center">Problem Statements</h3>
             <br><br>
@@ -142,8 +134,9 @@
                             <h6>Details about the Problem Statement</h6>
                             <h5>Eligibility Criteria</h5>
                             <p> one <br> two <br>three <br></p>
+                            <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>
                         </div>
-                        <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
+
 
                     </li>
                     <br>
@@ -157,6 +150,7 @@
                             <h6>Details about the Problem Statement</h6>
                             <h5>Eligibility Criteria</h5>
                             <p> one <br> two <br>three <br></p>
+                            <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>
                         </div>
                         <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
                     </li>
@@ -172,6 +166,7 @@
                             <h6>Details about the Problem Statement</h6>
                             <h5>Eligibility Criteria</h5>
                             <p> one <br> two <br>three <br></p>
+                            <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>
                         </div>
                         <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
                     </li>
@@ -188,6 +183,7 @@
                             <h6>Details about the Problem Statement</h6>
                             <h5>Eligibility Criteria</h5>
                             <p> one <br> two <br>three <br></p>
+                            <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>
                         </div>
                         <!--<a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a>-->
                     </li>
