--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
         <div class="divider"></div>
 
        <div>
-           <h2 class="center" style="color: orange" data-aos="zoom-in">Organizers</h2>
+           <h2 class="center" style="color: orange" data-aos="zoom-in">Partners</h2>
            <br>
             <div class="container">
                 <div class="row">
