--- a/hackathon.html
+++ b/hackathon.html
@@ -77,13 +77,14 @@
                 <div class="container">
                     <br><br>
 
-                    <br><br><br><br><br><br>
+                    <br><br><br><br>
 
                     <h1 class="header center white-text">HACKATHON</h1>
 
                     <h4 class="center orange-text text-lighten-1"><i class="material-icons">calendar_today</i> July 27, 2018</h4>
 
-                    <h4 class="center orange-text text-lighten-1">TCS Mihan</h4>
+                    <h4 class="center orange-text text-lighten-1">TCS Mihan <br> <br><a class="center waves-effect waves-light btn orange"><i class="material-icons left">adjust</i>Register</a>
+</h4>
 
                 </div>
             </div>
@@ -178,10 +179,15 @@
 
 
         </div>
+
+        <div class="center">
+            <a class="waves-effect waves-light btn orange" style="width: 400px;">Register</a>
+            <br>
+        </div>
     </main>
 
 
-
+<br>
 
     <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
