--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="row">
 
-                    <a href="page.html">
+                    <a href="hackathon.html">
                         <div class="col s12 m6 padded-top-comfortable" data-aos="flip-left">
                             <div class="card tiny zoomer fader valign-wrapper rounded" style="background-image: url('images/hero-slider/1.jpg')">
                                 <h2 class="light white-text center full-width">Hackathon</h2>
@@ -121,7 +121,7 @@
                         </div>
 
                     </a>
-                    <a href="page.html">
+                    <a href="conference.html">
                         <div class="col s12 m6  padded-top-comfortable" data-aos="flip-right">
                             <div class="card tiny zoomer fader valign-wrapper rounded" style="background-image: url('images/hero-slider/2.jpg')">
                                 <h2 class="light white-text center full-width">Conference</h2>
