--- a/conference.html
+++ b/conference.html
@@ -168,7 +168,7 @@
             <h2 class="center light orange-text text-darken-4 padded-bottom-comfortable ">Speakers</h2>
 
             <div class="row padded-top-comfortable">
-                <div class="row">
+                <div class="row container">
                     <div class="col s6 m6 offset-m2 l6">
                         <div class="card medium rounded">
                             <div class="card-image">
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row container">
                     <div class="col s6 m6 offset-m2 l6">
                         <div class="card medium rounded">
                             <div class="card-image">
