--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <input id="phone_number" type="number" class="validate">
+                                <input id="phone_number" type="text" class="validate">
                                 <label for="phone_number">Phone</label>
                             </div>
                         </div>
@@ -136,24 +136,20 @@
                             </div>
 
                         </div>
+                    </div>
                 </form>
                 </div>
 
             </div>
 
 
-<<<<<<< HEAD
-            <div class="divider"></div>
 
-            <!-- Map -->
-            <section style="width: 100%; padding: 0px" id="venue-container">
-=======
         <div class="divider"></div>
         <br>
         <br>
         <!-- Map -->
         <section style="width: 100%; padding: 0px" id="venue-container">
->>>>>>> origin/master
+
 
                 <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
 
