--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
-                    <a href="#!" class="brand-logo black-text">Logo</a>
+                    <a href="#!" class="brand-logo black-text"><img src="images/Logo_.jpg%20copy.png"></a>
                     <ul class="right hide-on-med-and-down">
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
@@ -192,7 +192,7 @@
                     <br>
                     <ul>
                         <li>
-                            <a class="waves-effect black-text" href="#">FAQ's</a>
+                            <a class="waves-effect black-text" href="faq.html">FAQ's</a>
                         </li>
                         <li>
                             <a class="waves-effect black-text" href="#">Terms</a>
