--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
-                    <a href="#!" class="brand-logo black-text">Logo</a>
+                    <a href="#!" class="brand-logo black-text"><img src="images/Logo_.jpg%20copy.png"></a>
                     <ul class="right hide-on-med-and-down">
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
@@ -269,20 +269,27 @@
         </section>
         <div class="divider"></div>
 
-        <div class="parallax-container">
-            <div class="parallax">
-                <img src="images/parallax.jpg" class="dark" data-aos="flip-up">
-            </div>
-            <div class="section valign-wrapper full-height">
-                <div class="container">
+
+
+
+    <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <br><br> <br> <br><br><br>
+
+                <div class="row center">
                     <h3 class="center white-text">Register</h3>
                     <p class="center white-text">some details about registration process</p>
                     <p class="center">
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                     </p>
                 </div>
+                <br><br>
+
             </div>
         </div>
+        <div class="parallax"><img src="images/parallax.jpg" alt="Unsplashed background img 1"></div>
+    </div>
 
 
 
@@ -336,7 +343,7 @@
                     <br>
                     <ul>
                         <li>
-                            <a class="waves-effect black-text" href="#">FAQ's</a>
+                            <a class="waves-effect black-text" href="faq.html">FAQ's</a>
                         </li>
                         <li>
                             <a class="waves-effect black-text" href="#">Terms</a>
