--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
         <div class="row" style="margin: 0">
 
 
-            <div class="col s12 m6 screen-height " style="padding-left: 0">
+            <div class="col s12 m6 more-screen-height" style="padding-left: 0;">
                 <div class="parallax-container full-height">
                     <div class="parallax">
                         <img src="images/11111.jpg" class="dark" data-aos="flip-up">
@@ -95,70 +95,72 @@
             <!-- ----- vertical divide ----- -->
 
 
-            <div class="col s12 m6 screen-height ">
+            <div class="col s12 m6 ">
 
                 <h3 class="center light padded-top-cozy orange-text text-darken-4">Contact us</h3>
 
 
                 <form class="container">
                     <div class="row">
+
                         <div class="input-field col s12">
                             <input id="first_name" type="text" class="validate">
                             <label for="first_name">Name</label>
                         </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email">Address</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="phone_number" type="text" class="validate">
-                                <label for="phone_number">Phone</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email">Email</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="comment" type="text" class="validate">
-                                <label for="comment">Comment</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12 center">
-                                <input type="submit" class="btn btn-large orange darken-3 white-text" value="Submit">
-                            </div>
-
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="email" type="email" class="validate">
+                            <label for="email">Address</label>
                         </div>
                     </div>
-                </form>
-                </div>
 
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="phone_number" type="text" class="validate">
+                            <label for="phone_number">Phone</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="email" type="email" class="validate">
+                            <label for="email">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="comment" type="text" class="validate">
+                            <label for="comment">Comment</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12 center">
+                            <input type="submit" class="btn btn-large orange darken-3 white-text" value="Submit">
+                        </div>
+
+                    </div>
+
+                </form>
             </div>
+
+        </div>
 
 
 
         <div class="divider"></div>
-        <br>
-        <br>
+
         <!-- Map -->
         <section style="width: 100%; padding: 0px" id="venue-container">
 
 
-                <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
+            <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
 
-            </section>
+        </section>
 
 
 
     </main>
-<footer class="page-footer white" style="border-top: 8px solid orange">
+    <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
                 <div class="col l6 s6">
