--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                     <h1 class="header center white-text" style="font-size: 90px;">About</h1>
                 </div>
             </div>
-            <div class="parallax"><img src="images/about3.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);"></div>
+            <div class="parallax"><img src="images/blackboard-business-chalkboard-355988.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);"></div>
         </div>
 
 
