--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IndNX 4.0 | Hackathon</title>
+    <title>IndNX 4.0 | FAQ's</title>
 
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/aos.css">
@@ -70,5 +70,11 @@
     </header>
 
 
+
+   <main>
+       <h3 class="center">
+           FAQs for CII - Hackathon 2018 participants
+       </h3>
+   </main>
     </body>
 </html>
