--- a/hackathon.html
+++ b/hackathon.html
@@ -126,7 +126,7 @@
 
             <ul class="collapsible expandable">
                 <li>
-                    <div class="collapsible-header"> <i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
+                    <div class="collapsible-header "> <i class="material-icons" style="color: orange">adjust</i>Problem Statement</div>
                     <div class="collapsible-body">
                         <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd vagb yy wfe syfk bib ygergyb</p>
                     </div>
@@ -262,6 +262,10 @@
             accordion: false
         });
 
+        function boorder()
+        {
+
+        }
     </script>
 
 </body>
