--- a/conference.html
+++ b/conference.html
@@ -261,7 +261,7 @@
                 </div>
             </div>
 
-            <h2 class="center light grey-text text-darken-2 padded-bottom-comfortable">PARTNERS</h2>
+            <h2 class="center orange-text text-darken-4 padded-bottom-comfortable">PARTNERS</h2>
             <div class="container">
                 <div class="row">
                     <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
