--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
         <div class="divider"></div>
 
     </main>
-<footer class="page-footer white" style="border-top: 8px solid orange">
+
+       <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
                 <div class="col l6 s6">
@@ -346,16 +347,16 @@
                             <a class="waves-effect black-text" href="faq.html">FAQ's</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Terms</a>
+                            <a class="waves-effect black-text" href="terms.html">Terms</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Mentors</a>
+                            <a class="waves-effect black-text" href="mentors.html">Mentors</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Support</a>
+                            <a class="waves-effect black-text" href="support.html">Support</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Privacy Policy</a>
+                            <a class="waves-effect black-text" href="privacypolicy.html">Privacy Policy</a>
                         </li>
 
                     </ul>
@@ -369,7 +370,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
