--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
             </div>
         </div>
-        <div class="parallax"><img src="images/parallax.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="images/bookcase-books-bookshelves-159711.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
 
