--- a/hackathon.html
+++ b/hackathon.html
@@ -79,7 +79,7 @@
 
                     <br><br><br><br>
 
-                    <h1 class="header center white-text">HACKATHON</h1>
+                    <h1 class="header center white-text">SMART INDUSTRIAL HACKATHON</h1>
 
                     <h4 class="center orange-text text-lighten-1"><i class="material-icons">calendar_today</i> July 27, 2018</h4>
 
@@ -245,7 +245,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                <a href="https://dayshmookh.github.io/" class="black-text">© 2018 R00T INC.</a>
+                <a href="https://dayshmookh.github.io/" class="black-text" target="_blank">© 2018 R00T INC.</a>
                 <a class="black-text right" href="#!">More Links</a>
             </div>
         </div>
