--- a/faq.html
+++ b/faq.html
@@ -207,7 +207,7 @@ Email- idea[at]i4c[dot]co[dot]in
         </div>
         <div class="footer-copyright">
             <div class="container">
-                <a href="https://dayshmookh.github.io/" class="black-text">© 2018 R00T INC.</a>
+                <a href="https://dayshmookh.github.io/" class="black-text" target="_blank">© 2018 R00T INC.</a>
                 <a class="black-text right" href="#!">More Links</a>
             </div>
         </div>
