--- a/hackathon.html
+++ b/hackathon.html
@@ -81,16 +81,20 @@
 
                     <h1 class="header center white-text">SMART INDUSTRIAL HACKATHON</h1>
 
-                    <h4 class="center orange-text text-lighten-1"><i class="material-icons">calendar_today</i> July 27, 2018</h4>
-
-                    <h4 class="center orange-text text-lighten-1">TCS Mihan <br> <br><a class="center waves-effect waves-light btn orange"><i class="material-icons left">adjust</i>Register</a>
-</h4>
-
                 </div>
             </div>
             <div class="parallax"><img src="images/business-commerce-computer-132700.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);"></div>
         </div>
-
+           <br><br>
+            <div class="container">
+            <h4 class="left orange-text text-lighten-2"><i class="material-icons">calendar_today</i> July 27, 2018</h4>
+                    <h4 class="right orange-text text-lighten-2"><i class="material-icons">location_on</i> TCS Mihan <br> <br></h4>
+            </div>
+    <br><br>
+      <br><br><br><br>
+       <div class="center">
+           <a class="waves-effect waves-light btn orange" style="width: 600px;">Register</a>
+       </div>
         <!--
         <div class="row container" style="height: 150px;">
             <div class="col s5 grey lighten-3" style="height: 150px; width: 450px; border-bottom: 6px solid orange; border-right: 6px solid orange">
@@ -115,7 +119,7 @@
             </div>
         </div>
         -->
-        <br><br>
+        <br>
         <div class="row container">
             <h3 class="orange-text text-lighten-2 center">Problem Statements</h3>
             <br><br>
