--- a/conference.html
+++ b/conference.html
@@ -138,6 +138,8 @@
 
         <section class="padded-top-comfortable">
 
+            <h2 class="center light orange-text text-darken-4 padded-bottom-comfortable">Date and Time</h2>
+
             <h2 class="center light orange-text text-darken-4 padded-bottom-comfortable ">Speakers</h2>
 
             <div class="row padded-top-comfortable">
